...
                            <constraint firstItem="pwh-rW-2b8" firstAttribute="bottom" secondItem="bka-Qc-x67" secondAttribute="bottom" id="Tkb-qa-bk7"/>
                            <constraint firstItem="pwh-rW-2b8" firstAttribute="top" secondItem="bka-Qc-x67" secondAttribute="top" id="URD-lD-R24"/>
                            <constraint firstItem="pwh-rW-2b8" firstAttribute="leading" secondItem="bka-Qc-x67" secondAttribute="leading" id="qL9-HC-L5v"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Assessments" image="assessements" id="zCu-Vb-q6I"/>
                    <navigationItem key="navigationItem" title="Folders" id="DUU-Nk-Ufd">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="icons8-menu" id="lea-RN-syv">
                            <connections>
                                <action selector="menuWasTapped:" destination="MO5-0J-5Ns" id="QY9-LM-nIA"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0S-cT-42r">
                                <rect key="frame" x="20" y="368" width="75.666666666666671" height="21"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQv-Ml-pP1">
                                <rect key="frame" x="20" y="298" width="374" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="lO0-dh-5PF"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0CW-T1-PNm">
                                <rect key="frame" x="20" y="397" width="374" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VrH-xE-0F0">
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="46" id="GlN-Ud-iEv"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <color key="tintColor" name="AccentColor"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Sign In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="signInAction:" destination="mcp-5f-kti" eventType="touchUpInside" id="nkY-jv-WzE"/>
                                </connections>
                            </button>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* Invalid email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cuy-jo-bTb">
                                <rect key="frame" x="20" y="344" width="374" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="invalidEmailLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="16" id="21R-sH-nEZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <color key="textColor" red="0.86414176229999995" green="0.19691652060000001" blue="0.20190998909999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
...
