...
        forgotPasswordLabel.addGestureRecognizer(tapAction)
        forgotPasswordLabel.isUserInteractionEnabled = true
        
        // update data from view model
        viewModel.errorStore.bind { [weak self] error in
            guard let error = error else {
                return
            }
            self?.error = error
            
            // show a sign-in failure alert
            AlertUtilities.showAlert2(self: self!, title: AlertUtilities.signInFailedTitle, message: AlertUtilities.signInFailedMessage, actionTitle: "OK", textColor: UIColor.red)
        }
        
        viewModel.tokenStore.bind { [weak self] tokenInfo in
            guard let tokenInfo = tokenInfo else {
                return
            }
...
