...
    private static let scheme = "http"
    
    static func getAssessmentFolders(completion: @escaping getAssessmentFolderCompletion) {
        var urlBuilder = URLComponents()
        urlBuilder.scheme = scheme
        urlBuilder.host = host
        urlBuilder.path = "/Folders"
        
        let url = urlBuilder.url!
        
        URLSession.shared.dataTask(with: url) { (data, response, error) in
            DispatchQueue.main.async {
                guard error == nil else {
...
    }
    
    static func submitFormAnswersToAPI(submitData: SubmitModel, token: String, completion: @escaping postRequestForInteractiveFormCompletion) {
        var urlBuilder = URLComponents()
        urlBuilder.scheme = scheme
        urlBuilder.host = host
        urlBuilder.path = "/Assessments"
        
        let url = urlBuilder.url!
        
        var request = URLRequest(url: url)
        request.httpMethod = "POST"
        request.setValue("application/json", forHTTPHeaderField: "Content-Type")
...
