...
                            <rect key="frame" x="400" y="26" width="18" height="18"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="18" id="KN0-3W-0Cu"/>
                                <constraint firstAttribute="height" constant="18" id="eZX-nG-yHt"/>
                            </constraints>
                        </imageView>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assessment Folder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BMf-On-EbM">
                            <rect key="frame" x="20" y="25" width="146" height="20"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="20" id="hJB-MC-a9d"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
...
